fix(core): 重构聊天模块并新增文件资产功能
- 重构聊天模块：移除ChatMessageServiceImpl、ChatModelRequest、DeepSeekChatModelClient和OpenAiCompatibleChatModelClient中冗余代码，共删除111行
- 新增文件资产功能：添加FileAssetController、FileAssetDO、FileAssetService及FileAssetServiceImpl，实现文件存储与资产管理，新增FileStorageProperties配置
- 更新配置与文档：修改application.yml和application-local.example.yml添加文件存储配置，更新数据库schema和项目文档说明

此提交为修复类型，涉及核心模块重构与文件资产功能扩展，非破坏性变更。